2010-10-09  Sancho Leerna <slerena@artica.es>

	* include/integria_cron.php: Fixed call to get_sys_tmp functiona

	* general/password_recovery.php: Fixed problems on validation with 
	Uppercase letters in login name.

2012-10-08  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php,
	operation/download/browse.php: Fixed several problems with ACL
	on file downloads.

2012-09-18  Sancho Lerena <slerena@artica.es>
	
	* integria_db.sql: Removed some reference integrity, due deleted
	users should not imply the destruction of some objets or reported
	work, useful for metrics above existance or not of some users.

	* godmode/usuarios/lista_usuarios.php: Remove project/task association
	for deleted users.

	* operation/newsletter/issue_definition.php: Added link to preview
	the newsletter in HTML format.

2012-09-13  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_detail.php,
	include/functions_workunits.php: WU Created on incident don't
	send email. Modified function to create wu to optionally supress
	email sending.

2012-09-11  SAncho Lerena <slerena@artica.es>

	* operation/download/browse.php: Allow to edit a file release
	without modifiyng the filename. Filename will never be editable.

2012-09-11  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/task_detail.php: Fixed force percent of
	completion of one task

2012-09-10  Sancho Lerena <slerena@artica.es>

	* index.php: Fixed problem with password recovery (OpenSource)

2012-09-06  Sancho Lerena <slerena@artica.es>

	* include/functions_xmlrpc.php: Removed.

	* include/xmlrpc: Removed.

	* include/integria_cron.php: Removed function to delete data from 
	user audit.

	* include/integria_xmlrpc_api.php: deleted.

	* integria_dbdata.sql,
	integria_demo.sql: Deleted SQL code used for user audit.

	* godmode/usuarios/lista_usuarios.php: Deleted deletion on user
	audit tables. Now user deletion doesn't give an error

2012-09-05  Sancho Lerena <slerena@artica.es>
